welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:18: error: ';' expected but 'while' found.
} while (!croisement())
  ^Poucet:24: error: 'while' expected but '}' found.
	}
        ^